--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = teensymm
+
 [env:teensy40]
 platform = teensy
 board = teensy40
+framework = arduino
+build_flags = -D USB_MIDI_SERIAL
+
+
+[env:teensymm]
+platform = teensy
+board = teensymm
 framework = arduino
 build_flags = -D USB_MIDI_SERIAL
